--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "json-server",
+  "name": "node-rivebot",
   "version": "1.0.0",
-  "description": "Example JSON server for RiveScript",
+  "description": "Example Bot made using RiveScript",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
