--- a/package.json
+++ b/package.json
@@ -2,12 +2,21 @@
   "name": "node-rivebot",
   "version": "1.0.0",
   "description": "Example Bot made using RiveScript",
+  "author": {
+        "name": "MultiShiv19",
+        "email": "sp@shiv19.com",
+        "url": "https://github.com/shiv19"
+  },
+  "readme": "README.md",
+  "repository": "https://github.com/shiv19/node-rivebot",
+  "bugs": {
+        "url": "https://github.com/shiv19/node-rivebot/issues"
+   },
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
   "license": "MIT",
   "dependencies": {
     "body-parser": "~1.14.2",
